Fix paragraph spacing in Guides
This quick PR addresses the overly tight (lack of) spacing between some paragraphs in our guides.  The way that the CSS is structured in this product leaves many ways in which inconsistency can be introduced. I'm not going to deal with the larger issues in this PR but will simply address the problem.

--- a/assets/css/guides.less
+++ b/assets/css/guides.less
@@ -1052,6 +1052,13 @@ body .guides .guides-section-white {
     text-align: center;
   }
 
+  .sect1 {
+    .paragraph {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  }
+
   .sect2 {
     .paragraph,
     dd {
@@ -1349,7 +1356,7 @@ body .guides .guides-section-white {
   tbody {
     background-color: #ffe3e3;
 
-    .content{
+    .content {
       font-size: 14px;
     }
 
